# freezable

./: Cargo.toml  readme.md
macros/: Cargo.toml
macros/src/: freezable.rs  lib.rs
src/: freezable.rs  lib.rs
src/persistence/: mod.rs  storage.rs  storage_impl.rs
src/tests/: storage_test.rs
tests/: storage_test.rs
